3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/plugins.c: don't remove/free removed/freed objects, log mistake. This closes
 bug #1670465: server doesn't have check to see if it is removing removed
Ryo 2007-03-04

Fix some potential / real crashes under Windows.
 common/readable.c: wrong field cleared. Set to NULL after clear. Wrong buffer size.
---
 socket/info.c: old_format is sometimes NULL, use new_format.
---
Fix a potential crash related to map swapping: swap_map can delete map.
 include/sproto.h
 server/c_wiz.c swap.c
Ryo 2007-03-03

utils/mapper.c: display map name before loading it, makes it easier to debug maps :)
Ryo 2007-03-02

Add cf_object_set_float_property.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
---
Add SpeedLeft to Python plugin. Fix wrong type for speed.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
---
Fix wrong type for speed.
 server/plugins.c
Ryo 2007-02-28

include/typesproto.h, types/*/*.c: Make functions static where possible and
   reasonable.
Alex Schultz 2007-02-24

server/player.c: wrong call order.
plugins/cfpython/cfpython.c: fix crash when Python and server are compiled with
 different versions of MS's DLLs.
Ryo 2007-02-24

Fix some comments from // to /* */
 common/map.c
 include/ob_types.h
 server/c_wiz.c gods.c pets.c server.c
----
Some Win32 compilation fixes.
 server/apply.c player.c plugins.c
Ryo 2007-02-23

Rebuild prototypes.
  include/{sproto.h, typesproto.h}
---
Move arrow and thrown object code into types/
  server/time.c, types/{arrow/arrow.c, thrown_object/thrown_object.c,
  common/projectiles.c, legacy/process.c}
---