@@ -15,6 +15,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/c_object.c: call EVENT_PICKUP which was forgotten somewhere along the way.
 server/plugins.c: don't remove/free removed/freed objects, log mistake. This closes
  bug #1670465: server doesn't have check to see if it is removing removed
 Ryo 2007-03-04
